--- a/source/css/components/treatments/treatments.styl
+++ b/source/css/components/treatments/treatments.styl
@@ -45,6 +45,9 @@
             &:hover
                 background: $color.primary
                 color: $color.white
+            &.active
+                background: $color.primary
+                color: $color.white
 
     .treatments-internal
         width: 100%
