--- a/source/css/components/blog/title-blog.styl
+++ b/source/css/components/blog/title-blog.styl
@@ -1,7 +1,7 @@
 .title-blog
     width 100%
     background-image: linear-gradient(to right, $color.secundary, #c83d8c, #ce5198)
-    padding 50px 20px
+    padding 30px 20px
     display flex
     flex-direction column
     align-items: center
@@ -42,3 +42,13 @@
             text-align center
             &:not(:last-child)
                 margin-right 5px
+    .buy
+        display inline-block
+        height 3.5rem
+        border-radius 5px
+        background: $color.primaryhover
+        padding 0 20px
+        line-height 3.5rem
+        color: $color.white
+        font-size 1.6rem
+        font-weight bold
