--- a/source/css/components/about/about.styl
+++ b/source/css/components/about/about.styl
@@ -2,7 +2,7 @@
     .carousel
         width 100rem
         max-width 100%
-        margin 5rem auto
+        margin 5rem auto 3rem
         overflow hidden
     .owl-stage
         display: flex
