--- a/source/css/components/contato/form.styl
+++ b/source/css/components/contato/form.styl
@@ -17,6 +17,8 @@
         border-color: $color.text
         color: $color.text
         font-size 1.3rem
+        &.error
+            border-color: red
     textarea
         height 12rem
         resize none
