--- a/source/css/components/template/text.styl
+++ b/source/css/components/template/text.styl
@@ -1,8 +1,10 @@
 .box-text
-    width 74rem
     max-width 100%
-    margin 5rem auto 0
+    margin 5rem auto
     padding 0 2rem
+    display flex
+    flex-direction column
+    align-items: center
     p
         font-size 1.8rem
         line-height 2
