--- a/source/css/components/home/section-treatments.styl
+++ b/source/css/components/home/section-treatments.styl
@@ -74,7 +74,7 @@
         flex 1
         padding: 2rem 2rem 3rem
         h3
-            font-size 3.5rem
+            font-size 2.8rem
             color: $color.primary
             margin-bottom 2rem
         p
@@ -105,11 +105,23 @@
         background: $color.primaryhover
 
 .all
-    width 39rem
-    max-width 100%
-    display block
-    font-family: $font-family.secondary
+    width: 42rem
+    max-width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    font-family: 'Noto Sans' , sans-serif
     font-size: 1.8rem
-    color: $color.primary
-    padding 1rem
-    margin 5rem auto 0
+    color: #c83d8c
+    padding: 1rem
+    margin: 7rem auto 0
+    font-weight: bold
+    span
+        width: 30px
+        height: 30px
+        display: inline-block
+        border-radius: 30px
+        line-height: 30px
+        background: #c83d8c
+        color: #fff
+        text-align: center
