--- a/source/css/components/template/text.styl
+++ b/source/css/components/template/text.styl
@@ -5,7 +5,7 @@
     display flex
     flex-direction column
     align-items: center
-    p
+    p, ul
         font-size 1.8rem
         line-height 2
         color: $color.text
@@ -14,4 +14,8 @@
         margin-top 2rem
         :not(:last-child)
             margin-top 2rem
-    
+    h2
+        font-size 2rem
+        color: $color.primary
+        margin-top 2rem
+        text-align left
