alterações equipe e etc

--- a/source/css/components/newsletter/newsletter.styl
+++ b/source/css/components/newsletter/newsletter.styl
@@ -49,3 +49,7 @@
             font-size 1.6rem
             font-weight bold
             cursor pointer
+    .feedback
+        font-size: 18px
+        line-height 2
+        color: white
