--- a/source/css/components/about/team.styl
+++ b/source/css/components/about/team.styl
@@ -8,10 +8,11 @@
         max-width 100%
         margin 5rem auto 0
         .item
+            width 33.33%
             display flex
             flex-direction column
             align-items: center
-            padding 1rem
+            padding 2rem
             +below(64rem)
                 width 50%
             +below(30rem)
@@ -22,6 +23,18 @@
             border-radius 20rem
             border 1px solid #e6e6e6
             overflow hidden
+            &:hover
+                > .first
+                    display none
+                > .second
+                    display block
+            img
+                width 100%
+                height 100%
+                object-fit: contain
+                object-position: center
+            .second
+                display none
         h3
             font-size 2rem
             color: $color.primary
