--- a/source/css/components/template/text.styl
+++ b/source/css/components/template/text.styl
@@ -1,21 +1,17 @@
 .box-text
-    max-width 100%
+    max-width 70rem
     margin 5rem auto
     padding 0 2rem
-    display flex
-    flex-direction column
-    align-items: center
     p, ul
         font-size 1.8rem
         line-height 2
         color: $color.text
         font-family: $font-family.secondary
-        max-width 70rem
-        margin-top 2rem
         :not(:last-child)
             margin-top 2rem
     h2
         font-size 2rem
         color: $color.primary
-        margin-top 2rem
+        margin 2rem 0 1rem
         text-align left
+        width 100%
