--- a/source/css/components/home/testmonials.styl
+++ b/source/css/components/home/testmonials.styl
@@ -53,3 +53,14 @@
             position absolute
             top: 0
             right: 102%
+    .prev, .next
+        font-size 5rem
+        color: $color.primary
+        position absolute
+        top 50%
+        left -5%
+        transform translateY(-50%)
+        cursor pointer
+    .next
+        left auto
+        right -5%
