--- a/source/css/components/template/text.styl
+++ b/source/css/components/template/text.styl
@@ -15,3 +15,9 @@
         margin 2rem 0 1rem
         text-align left
         width 100%
+    img 
+        display block
+        margin: 0 auto
+    iframe
+        width: 100% !important 
+        height 400px !important
